<resources>
    <string name="app_name">StudyFor5</string>
    <string name="login_et">Логин</string>
    <string name="password_et">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Профиль</string>
    <string name="shopping">Корзина</string>
    <string name="quests">Задания</string>
    <string name="product_name">Название</string>
    <string name="product_price">Цена</string>
    <string name="photo">Фото</string>
    <string name="info">Информация</string>
    <string name="level">Уровень:</string>
    <string name="change_username">Сменить Ник</string>
    <string name="theme">Тема Приложения</string>
    <string name="delete">Удалить аккаунт</string>
    <string name="change">Сменить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_btn">Удалить</string>
    <string name="question">Удалить аккаунт?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="tasks">Задания</string>
    <string name="combos">Комбо</string>
    <string name="log_out">Выйти</string>
    <string name="update">Перезагрузить</string>
</resources>