<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/lg_view"
        android:layout_width="300sp"
        android:layout_height="260sp"
        android:background="@drawable/light_gray_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/g_view"
        android:layout_width="260sp"
        android:layout_height="220sp"
        android:background="@drawable/gray_outline"
        app:layout_constraintBottom_toBottomOf="@+id/lg_view"
        app:layout_constraintEnd_toEndOf="@+id/lg_view"
        app:layout_constraintStart_toStartOf="@+id/lg_view"
        app:layout_constraintTop_toTopOf="@+id/lg_view" />

    <Button
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/red_outline"
        android:text="@string/yes"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/g_view"
        app:layout_constraintStart_toStartOf="@+id/g_view"
        app:layout_constraintTop_toBottomOf="@+id/ask_tv" />

    <TextView
        android:id="@+id/ask_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/question"
        android:textColor="@color/ui_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/g_view"
        app:layout_constraintStart_toStartOf="@+id/g_view"
        app:layout_constraintTop_toTopOf="@+id/g_view" />

    <Button
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/red_outline"
        android:text="@string/no"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/g_view"
        app:layout_constraintStart_toStartOf="@+id/g_view"
        app:layout_constraintTop_toBottomOf="@+id/yes_button" />
</androidx.constraintlayout.widget.ConstraintLayout>