<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <View
        android:id="@+id/outline"
        android:layout_width="315sp"
        android:layout_height="265sp"
        android:layout_marginTop="232dp"
        android:background="@drawable/light_gray_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/password_outline_r"
        android:layout_width="230sp"
        android:layout_height="50sp"
        android:layout_marginTop="32dp"
        android:background="@drawable/gray_outline"
        app:layout_constraintEnd_toEndOf="@+id/outline"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/outline"
        app:layout_constraintTop_toBottomOf="@+id/login_outline_r" />

    <View
        android:id="@+id/login_outline_r"
        android:layout_width="230sp"
        android:layout_height="50sp"
        android:layout_marginTop="28dp"
        android:background="@drawable/gray_outline"
        app:layout_constraintEnd_toEndOf="@+id/outline"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/outline"
        app:layout_constraintTop_toTopOf="@+id/outline" />

    <Button
        android:id="@+id/register_button_r"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="32dp"
        android:background="@drawable/red_outline"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/outline"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/outline"
        app:layout_constraintTop_toBottomOf="@+id/password_outline_r" />

    <EditText
        android:id="@+id/login_editText_r"
        android:layout_width="220sp"
        android:layout_height="50sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/login_et"
        app:layout_constraintBottom_toBottomOf="@+id/login_outline_r"
        app:layout_constraintEnd_toEndOf="@+id/login_outline_r"
        app:layout_constraintStart_toStartOf="@+id/login_outline_r" />

    <EditText
        android:id="@+id/password_editText_r"
        android:layout_width="220sp"
        android:layout_height="50sp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password_et"
        app:layout_constraintBottom_toBottomOf="@+id/password_outline_r"
        app:layout_constraintEnd_toEndOf="@+id/password_outline_r"
        app:layout_constraintStart_toStartOf="@+id/password_outline_r" />
</androidx.constraintlayout.widget.ConstraintLayout>