<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AppActivity">

    <View
        android:id="@+id/bottom_menu_outline"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="@drawable/menu_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/fragmentLayout"
        android:layout_width="409dp"
        android:layout_height="659dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_menu_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="136sp"
            android:layout_height="70sp"
            android:layout_marginBottom="28dp"
            android:clickable="true"
            android:orientation="vertical"
            android:focusable="true">

            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <ImageView
                android:id="@+id/profile_iv"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                app:srcCompat="@drawable/user" />

            <TextView
                android:id="@+id/profile_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/ui_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cart_layout"
            android:layout_width="136sp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical"
            android:focusable="true">

            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <ImageView
                android:id="@+id/cart_iv"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                app:srcCompat="@drawable/shopping_cart_red" />

            <TextView
                android:id="@+id/cart_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shopping"
                android:textAlignment="center"
                android:textColor="@color/ui_red" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quests_layout"
            android:layout_width="136sp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical"
            android:focusable="true">

            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <ImageView
                android:id="@+id/quests_iv"
                android:layout_width="match_parent"
                android:layout_height="25sp"
                app:srcCompat="@drawable/bookmark" />

            <TextView
                android:id="@+id/quests_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tasks"
                android:textAlignment="center"
                android:textColor="@color/ui_gray" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>